# argus_core

./: CMakeLists.txt  README.md  package.xml
msg/: NeuralFrame.msg
src/: odin_object_detection_node.cpp
